--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@
     ##### - PLACE YOUR CUSTOM CSS HERE - #####
     --------------------------------------- */
 
+    
+
 .main-content-wrapper .header-area {
     -webkit-transition-duration: 500ms;
     transition-duration: 500ms;
@@ -114,8 +116,7 @@
     color: #fff; }
 
 
-.main-content-wrapper .amado_product_area
-{
+.main-content-wrapper .amado_product_area{
     position: relative;
     margin-left: 80px;
     z-index: 1;
@@ -130,4 +131,242 @@
     width: 100px;
     height: 300px;
 }
+
+ .main-content-wrapper .amado_product_area .container-fluid h6{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+/*---------------Responsive untuk Hp*---------------*/
+
+/*Hp Layar Medium*/
+
+@media only screen and (max-width: 375px){
+  .main-content-wrapper .amado_product_area .single-product-wrapper .ratings-cart .ratings i{
+    font-size: 3px;
+  }
+
+  .main-content-wrapper .cart-table-area table tbody{
+    width: 300px;
+  }
+
+  .main-content-wrapper .cart-table-area table tbody tr .price span{
+    font-size: 12px;
+  }
+
+  .main-content-wrapper .cart-table-area table tbody tr td .qty-btn p{
+    font-size: 12px;
+  }
+
+
+
+} 
+/*Hp Layar Medium*/
+
+
+/*Hp Layar Besar*/
+
+@media only screen and (max-width: 425px){
+
+  /*-----Shop Page-----*/
+
+  .main-content-wrapper .mobile-nav{
+    background-color: yellow;
+  }
+  .main-content-wrapper .header-area{
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 200px;
+    flex: 0 0 200px;
+    width: 200px;
+    height: 1000px;
+    max-width: 200px;
+    padding: 30px;
+    z-index: 3;
+    background-color: yellow;
+
+   } 
+  
+  .main-content-wrapper .header-area .nav-close{
+    margin-right: -15px;
+    margin-top: 5px;
+  }
+
+  .main-content-wrapper .header-area .logo{
+    width: 100px;
+    height: 150px;
+    margin-left: 10px;
+  }
+
+  .main-content-wrapper .header-area .amado-nav{
+    margin-top: -80px;
+  }
+
+  .main-content-wrapper .header-area .amado-nav li a{
+    font-size: 12px;
+  }
+
+  .main-content-wrapper .header-area .amado-btn-group .amado-btn{
+    width: 90px;
+    height: 50px;
+    font-size: 14px;
+    margin-left: -18px;
+
+  }
+
+  .main-content-wrapper .header-area .cart-fav-search a{
+    font-size: 14px;
+    margin-left: 25px;
+  }
+
+  .main-content-wrapper .header-area .cart-fav-search img{
+    margin-left: -20px;
+    margin-bottom: -3px;
+  
+  }
+
+  .main-content-wrapper .header-area .social-info i{
+    padding: 10px;
+    margin-left: -5px;
+  }
+
+  .main-content-wrapper .amado_product_area {
+    -webkit-box-flex: 2;
+    -ms-flex: 2 2 calc(100% - 100px);
+    flex: 2 2 calc(100% - 100px);
+    width: calc(100% - 200px);
+    max-width: calc(100% - 200px); 
+    margin-top: -950px;
+    margin-left: 100px;
+  }
+
+  .main-content-wrapper .amado_product_area .container-fluid h6{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    margin-top: -50px;
+  }
+
+  .main-content-wrapper .amado_product_area .single-product-wrapper .product-img .hover-img{
+    width: 200px;
+    height: 170px;
+  }
+
+  .main-content-wrapper .amado_product_area .single-product-wrapper .product-meta-data p{
+    font-size: 15px;
+    margin-left: 0px;
+    margin-bottom: 50px;
+  }
+
+  .main-content-wrapper .amado_product_area .single-product-wrapper .product-meta-data h6{
+    font-size: 10px;
+    margin-left: 0px;
+  }
+
+  .main-content-wrapper .amado_product_area .single-product-wrapper .product-meta-data h5{
+    font-size: 10px;
+    margin-top: 1px;
+
+  }
+
+  .main-content-wrapper .amado_product_area .single-product-wrapper .ratings-cart .ratings i{
+    font-size: 8px;
+  }
+
+   .main-content-wrapper .single-product-wrapper .product-meta-data .line {
+    width: 80px;
+    height: 3px;
+    background-color: #fbb710;
+    margin-bottom: 10px; 
+  }
+
+  .newsletter-area .newsletter-text h2{
+    font-size: 18px;
+  }
+
+  .newsletter-area .newsletter-text p{
+    font-size: 15px;
+  }
+
+  .footer_area .single_widget_area .footer-logo{
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer_area .single_widget_area .footer-logo img{
+    height: 150px;
+    width: 220px;
+  }
+
+  .footer_area .single_widget_area .footer_menu .navbar {
+    display: flex;
+    justify-content: center;
+    
+  }
+
+  .footer_area .single_widget_area .footer_menu .navbar .navbar-nav .nav-item .nav-link{
+    display: flex;
+    justify-content: center;
+  }
+   /*-----Shop Page-----*/
+
+  /*-----Product Details Page*-----*/
+
+  .main-content-wrapper .single-product-area{
+    margin-top: -1000px;
+  }
+
+  .main-content-wrapper .single-product-area .breadcrumb .breadcrumb-item a{
+    font-size: 12px;
+    padding: 2px;
+
+  }
+
+  .main-content-wrapper .single-product-area .breadcrumb .breadcrumb-item{
+    font-size: 12px;
+  }
+
+  .main-content-wrapper .single-product-area .single_product_thumb .carousel-indicators li{
+   
+  }
+
+  .main-content-wrapper .single-product-area .single_product_desc .product-meta-data a h6{
+    font-size: 23px;
+  }
+
+  .main-content-wrapper .single-product-area .single_product_desc .short_overview p{
+    font-size: 15px;
+  }
+
+  .main-content-wrapper .single-product-area .single_product_desc .cart .amado-btn{
+    margin-left: 55px;
+  }
+
+  /*-----Product Details Page*-----*/
+
+
+  /*-----Cart Page*-----*/
+  .main-content-wrapper .cart-table-area {
+    margin-top: -950px;
+  }
+
+  .main-content-wrapper .cart-table-area .cart-title h2 {
+    font-size: 25px;
+    margin-bottom: 25px;
+  }
+
+
+
+  /*-----Cart Page*-----*/  
+
+
+
+
+  
+}
+/*Hp Layar Besar*/
+
+
+/*---------------Responsive untuk Hp*---------------*/ 
 
