--- a/checkoutpage.css
+++ b/checkoutpage.css
@@ -20,8 +20,7 @@ p,h1,h2,h3,h4,h5{
 }
 
 body{
-	margin-top: 150px;
-	color: royalblue;
+	margin-top: 120px;
 }
 
 .content-text h2{
@@ -29,10 +28,14 @@ body{
 	justify-content: center;
 }
 
-.content-img img{
+.content-img{
+	display: flex;
+	justify-content: center
+}
+
+.content-img img{;
 	width: 400px;
-	height: 250px;
-    margin-left: 27rem; 
+	height: 250px; 
 }
 
 .greeting-text h1{
@@ -45,8 +48,9 @@ body{
 	justify-content: center;
 }
 
-.button-home a{
-	margin-left: 33rem;
+.button-home {
+	display: flex;
+	justify-content: center;
 }
 
 .button-home .btn-back{
@@ -61,3 +65,32 @@ body{
 	font-weight: 700; 
 	cursor: pointer;
 }
+
+
+  
+ /*untuk layar device HP*/
+ @media screen and (max-width: 426px) {
+	 body{
+		 overflow-x: hidden;
+		 margin-top: 3rem;
+	 }
+	.content-text h2 {
+		font-size: 1.5rem;
+		text-align: center;
+	}
+
+	.content-img img{
+		width: 300px;
+		height: 200px;
+	}
+
+	.greeting-text h1{
+		font-size: 1.5rem;
+		text-align: center;
+	}
+
+	.greeting-text p{
+		font-size: 1rem;
+	}
+ }
+  
