--- a/aboutindomie.css
+++ b/aboutindomie.css
@@ -125,8 +125,99 @@ footer{
     background-image: url(image/logo-indofood.png);
     background-repeat: no-repeat;
     background-color: lightgrey;
-    background-size: 15rem;
+    background-size: 12rem;
     background-position: left ;
+    background-position-x: 2rem;
+}
+
+/* Responsive untuk device HP */
+
+@media screen and (max-width: 426px) {
+    header img{
+        width: 120px;
+        height: 80px;
+    }
+
+    header h1{
+        margin-left: 5rem;
+        font-size: 20px;
+        margin-top: 2px;
+        overflow-x: hidden;
+    }
+
+    .container{
+        margin-top: 2.5rem;
+        overflow-x: hidden;
+    }
+
+    #article{
+        float: none;
+    }
+
+    #sidebar{
+        float: none;
+    }
+
+    #sidebar .about-image img{
+        width: 350px;
+        height: 270px;
+        margin-left: -3rem;
+    }
+
+    .history-article h1{
+        margin-top: -12rem;
+        margin-left: -3rem;
+    }
+
+    .history-article p{
+        width: 330px;
+        font-size: 15px;
+        margin-left: -3rem;
+    }
+
+    #article .history-image img{
+        overflow-x: hidden;
+        margin-left: 2rem;
+        margin-top: -2rem;
+        height: 450px;
+        width: 350px;
+    }
+
+
+    #article h1{
+        overflow-x: hidden;
+        margin-top: 8rem;
+        margin-left: -12rem;
+        display: flex;
+        justify-content: center;
+    }
+
+    #article p{
+        overflow-x: hidden;
+        display: flex;
+        justify-content: center;
+        font-size: 15px;
+        width: 300px;
+        margin-left: 4rem;
+    }
+
+    footer{
+        overflow-x: hidden;
+        bottom: 0;
+        width: 80;
+        text-align: center;
+        font-size: 10px;
+        height: 80px;
+        line-height:20px;
+        padding-left: 10px;
+        padding-right: 30px;
+        margin-bottom: -1rem;
+        margin-top: 5rem;
+        background-size: 5rem;
+        background-position: center;
+        background-position-y: 3rem;
+    }
+    
 }
 
 @media screen and (max-width: 376px){
